# vmrp

./: .gitignore  AGENTS.MD  CHANGELOG.MD  CMakeLists.txt  Makefile  README.md  mythroad  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: vitest.yml
doc/: Linux.MD  gghjt-fix-report.md  gghjt-jit-cache-fix.md  mpc_event_routing_fix.md  prompt.md
docs/: BUG.MD  TESTING.md  android-arm64-type-issues-report.md  app-compat-bridge-slot-verification.md  arm-ext-abi.md  arm-ext-executor-refactor-plan.md  arm-ext-fingerprint-classification.md  arm-ext-multi-instance-design.md  arm-ext-phase2-progress.md  arm-ext-phase4-progress.md  arm_ext_executor-issues.md  cache-mojibake-analysis.md  cfunction_x86_refactor.md  chinese-mrp-filename-start-fix.md  current-code-issues.md  dota-browser-plugin-crash-debug.md  dota-download-browser-components-display-debug.md  fix-exit.md  flutter-integration.md  gghjt-continue-reopen-fix.md  gghjt-game-start-render-progress.md  gms-payment-latency-analysis.md  gwkdl-image-debug.md  gxdzc-download-fix.md  gxdzc-start-app-fix.md  gzwdzjs-no-netpay-freeze-debug.md  gzwdzjs-render-corruption-debug.md  gzwdzjs-repro-unmapped-debug.md  gzwdzjs-tutorial-loading-hang-debug.md  gzwdzjs-tutorial-top-black-debug.md  lcd-rotation-feature.md  motion-chip-feature.md  mpc_exit_recursion_handoff.md  mythroad-platform-reference.md  opbzqe-advbar-black-region-debug.md  optwar-advbar-input-fix.md  prompt.md  talkcat-mp3-sound-fix.md  talkcat-screen-corruption-debug.md  talkcat-startup-crash-debug.md  (+4 more)
docs/DNS/: DNS_TRACE_ANALYSIS.md  DNS_TRACE_INDEX.md  FINDINGS_SUMMARY.txt  QUICK_REFERENCE.md
docs/arm-ext-executor/: README.md  api-reference.md  architecture.md  debugging-and-verification.md  host-bridge.md  memory-and-abi.md  modules-and-timers.md
docs/gxdzc/: ARCHITECTURE_ANALYSIS.md  INTERNALS_INDEX.md  QUICK_REFERENCE.md  THREADING_MODEL.md
docs/refactor/: app-compat-generic-refactor.md  arm-ext-executor-refactor-plan.md  arm-ext-fingerprint-classification.md  arm-ext-multi-instance-design.md  arm-ext-phase0-progress.md  arm-ext-phase1-progress.md  arm-ext-phase2-progress.md  arm-ext-phase3-progress.md  arm-ext-phase4-progress.md  arm-ext-phase5-progress.md
docs/修复记录/: bird-long-mrp-name-black-screen-debug.md  gms-payment-latency-analysis.md  gtcm-black-screen-debug.md  gtdgdq-menu-help-textcreate.md  gtxzj-black-screen-progress.md  gwkdl-image-debug.md  op6120-4m-startup-hang-debug.md  opbzqe-advbar-black-region-debug.md  optwar-advbar-input-fix.md  rx45-startup-debug.md  sanguo-black-screen-compat.md  sanguo-black-screen-disassembly.md  sanguo-black-screen-progress.md  sanguo-black-screen-runtime.md  wbrw-input-paste-debug.md  wbrw-windows-dns-map-debug.md  wxmdld-99-percent-crash-debug.md
docs/浏览器下载分析/: README.md
mrc/: README.md  mrc_base.h
omx_wiki/: arm-ext-canonical-empty-event-layer-recovery.md  cookie-child-return-opening-folder-frame-replay.md  cookie-e2e-key-timer-generation-boundary.md  cookie-mrp-restart-and-full-runtime-version-contract.md  dota-browser-plugin-dsm-package-provenance.md  dota-browser-plugin-network-state-investigation.md  dota-browser-plugin-record-pack-slot-fix.md  dota-browser-plugin-second-simpledownload-trigger.md  dota-download-browser-components-transition-frame-fix.md  dota-download-browser-components-waiting-hypothesis-invalidated.md  gfhcq-game-stutter-performance-investigation.md  gghjt-modal-timer-and-cold-extraction-regressions.md  gjxqy-local-download-protocol-and-fixture-id-mismatch.md  gjxqy-missing-installed-resource-black-scene.md  gms-payment-latency-analysis.md  gsha-old-compact-timer-download-callback-fix.md  gtxzj-date-guard-and-default-runtime-assets.md  gwyaz-installed-file-probe-and-wrapper-rw-owner-fix.md  gzwdzjs-arm-ext-drawbitmap-source-overrun.md  gzwdzjs-play-mr-ucs2gb-caller-owned-output-pointer-fix.md  gzwdzjs-primary-black-clear-damage-synthesis.md  gzwdzjs-table-bridge-stale-epilogue-guard.md  index.md  log.md  mps-selector-100-is-not-record-100.md  op6120-independent-scrram-4m-startup-fix.md  opglqa-font-download-repeat-investigation.md  optwar-exit-plugin-component-update-stall.md  optwar-exit-plugin-no-network-investigation.md  optwar-exit-plugin-stall-fix-progress.md  private-loader-wrapper-package-context-repair.md  rx4-5-arm-ext-0x80000000-platform-io-mapping.md  rzsgqd-background-music-silent-debugging.md  sanguo-black-screen-dynamic-lg-mem-arena-fix.md  wbrw-go-html2sky-rendering-final-verification-2026-07-12.md  wbrw-go-html2sky-rendering-progress-2026-07-12.md  wbrw-html2sky-completion-audit-2026-07-12-latest.md  wbrw-html2sky-line-wrap-progress-2026-07-16.md  wbrw-html2sky-native-elements-and-ppm-verification-2026-07-12.md  wbrw-html2sky-post-cleanup-final-evidence-2026-07-12.md  (+9 more)
src/: app_compat.c  app_compat_gghjt.c  app_compat_gxdzc.c  arm_ext_executor.c  bridge.c  debug.c  e2e_control.c  fileLib.c  file_lib.c  main.c  memory.c  native_dsm_funcs.c  native_platform_memory.c  native_text_widget.c  network.c  runtime_arm_cfunction.c  runtime_native_mythroad.c  skyengine.c  skyengine_api.c  skyengine_args.c  utils.c  vmrp.c  vmrp_api.c  vmrp_args.c
src/arm_ext/: aex_diag.c  aex_exec.c  aex_guard.c  aex_mem.c  aex_module.c  aex_pack.c  aex_screen.c  aex_support.c  aex_table.c  aex_timer.c
src/include/: app_compat.h  arm_ext_executor.h  arm_ext_host.h  arm_ext_internal.h  arm_ext_priv.h  bridge.h  compat_msvc.h  dirent_win.h  dsm.h  e2e_control.h  fileLib.h  file_lib.h  memory.h  native_dsm_funcs.h  (+12 more)
test/: bug.sh  gghjt-pay-normal-back.sh  harness.h  mpc-exit.sh  stubs.c  stubs_configurable.h  test_api_lifecycle.c  test_api_main.c  test_app_compat.c  test_app_compat_main.c  test_dns_map.c  test_filelib.c  test_filelib_main.c  test_got_snapshot.c  test_main.c  test_parser.c
tool/: Mrper.ini  analyze-mr.py  applist-server.js  download-server.js  extract-wrapper-asset.py  jxqy-server.js  proxy.js  replace-mrp-entry.js  server-http.js  server-logic.md  server-socket.js  skymobi-pay-server.go  skymobi-pay-server.js
unicorn/: make.sh
(+251 files in other folders)
